# contacts_fastapi_25

./: Dockerfile  alembic.ini  compose.env  docker-compose.yaml  main.py  pyproject.toml
.do/: app.yaml
.github/workflows/: ci.yml
alembic/versions/: 71a1fffde5fa_add_user_model.py  7d714921c09d_initial_tables.py  97d0dc0801c1_is_active_for_users.py  ae4de2277d99_added_roles.py
config/: general.py
src/auth/: models.py  repo.py  routers.py  schemas.py  utils.py
src/contacts/: models.py  repos.py  routers.py  schema.py
tests/: conftest.py  test_auth.py  test_contacts.py  test_health.py
