[tool.poetry]
name = "contacts-fastapi-25"
version = "0.1.0"
description = ""
authors = ["Sergey Tovstonog <s.tovstonog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
black = "^24.10.0"
isort = "^5.13.2"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
fastapi-mail = "^1.4.1"
fastapi-cache2 = "^0.2.2"
setuptools = "^75.5.0"
asyncio = "^3.4.3"
redis = "^5.2.0"
uvicorn = "^0.32.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
